--- a/Services/Servicio_Turnos/turnos/turnos/src/main/resources/application.properties
+++ b/Services/Servicio_Turnos/turnos/turnos/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.datasource.url=jdbc:mysql://localhost:3306/servicio_turnos?serverTimezone
 spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+feign.pokeapi.url=http://localhost:9001/pacientes
